--- a/src/brickwork.html
+++ b/src/brickwork.html
@@ -1,57 +1,124 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Gallant Brickwork Limited | About</title>
-		<meta name="description" content="Gallant Brickwork has established itself as a leading brickwork subcontractor within the South East. We have successfully completed high quality and bespoke projects for our core clients, enabling us to enjoy continued growth and expansion." />
-		<meta name="keywords" content="gallant, brickwork, silicone damp treatment, fire barrier remedials" />
-		<meta name="author" content="Gallant" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Gallant Brickwork Limited | About</title>
+    <meta
+      name="description"
+      content="Gallant Brickwork has established itself as a leading brickwork subcontractor within the South East. We have successfully completed high quality and bespoke projects for our core clients, enabling us to enjoy continued growth and expansion."
+    />
+    <meta
+      name="keywords"
+      content="gallant, brickwork, silicone damp treatment, fire barrier remedials"
+    />
+    <meta name="author" content="Gallant" />
 
-		<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-		<link rel="manifest" href="./site.webmanifest">
-		<link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5">
-		<meta name="msapplication-TileColor" content="#da532c">
-		<meta name="theme-color" content="#ffffff">
-		<link rel="stylesheet" type="text/css" href="css/base.css" />
-		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-	</head>
-	<body>
-		<div class="page-wrapper">
-		<header>
-			<nav>
-				<ul>
-					<li><a href="/">Home</a></li>
-					<li><a href="./brickwork.html">Brickwork</a></li>
-					<li><a href="./fire-barrier-remedials.html">Fire Barrier Remedials</a></li>
-					<li><a href="./silicone-damp-treatment.html">Silicone Damp Treatment</a></li>
-					<li><a href="./about.html">About</a></li>
-					<li><a href="./contact.html">Contact</a></li>
-				</ul>
-			</nav>
-		</header>
-		<div>
-			<h1>Brickwork</h1>
-			<div class="content-grid">
-				<div>
-					<p class="content-lead">For over three decades, our dedication to brickwork has enabled us to maintain and grow as one of the leading subcontractors within our industry.</p>
-					<div class="content-columns">
-						<p>Gallant Brickwork has an extensive workforce of highly skilled tradesmen, who carry a wealth of knowledge in all aspects of bricklaying.<br /><br />
-							Our core structure is built around the considera- ble high-level management we retain, enabling us to successfully build and develop strong relationships with our clients.</p>
-						<p>Our brickwork services include all new build residential and commercial developments, Edu- cation and health care projects.<br /><br />
-							We are able to offer services that cover the ma- jority of the South East of England and London.</p>
-					</div>
-				</div>
-				<div>
-					<img style="width: 100%;" src="./img/about.png">
-				</div>
-			</div>
-		</div>
-		<footer>
-		</footer>
-	</div>
-		<script type="module" src="js/index.js"></script>
-	</body>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
+    <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="stylesheet" type="text/css" href="css/base.css" />
+    <script>
+      document.documentElement.className = "js";
+      var supportsCssVars = function () {
+        var e,
+          t = document.createElement("style");
+        return (
+          (t.innerHTML = "root: { --tmp-var: bold; }"),
+          document.head.appendChild(t),
+          (e = !!(
+            window.CSS &&
+            window.CSS.supports &&
+            window.CSS.supports("font-weight", "var(--tmp-var)")
+          )),
+          t.parentNode.removeChild(t),
+          e
+        );
+      };
+      supportsCssVars() ||
+        alert(
+          "Please view this demo in a modern browser that supports CSS Variables."
+        );
+    </script>
+  </head>
+  <body>
+    <div class="page-wrapper">
+      <header>
+        <nav>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="./brickwork.html">Brickwork</a></li>
+            <li>
+              <a href="./fire-barrier-remedials.html">Fire Barrier Remedials</a>
+            </li>
+            <li>
+              <a href="./silicone-damp-treatment.html"
+                >Silicone Damp Treatment</a
+              >
+            </li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+      <div>
+        <h1 class="content-title">Brickwork</h1>
+        <div class="content-grid">
+          <div>
+            <p class="content-lead">
+              For over three decades, our dedication to brickwork has enabled us
+              to maintain and grow as one of the leading subcontractors within
+              our industry.
+            </p>
+            <div class="content-columns">
+              <p>
+                Gallant Brickwork has an extensive workforce of highly skilled
+                tradesmen, who carry a wealth of knowledge in all aspects of
+                bricklaying.<br /><br />
+                Our core structure is built around the considera- ble high-level
+                management we retain, enabling us to successfully build and
+                develop strong relationships with our clients.
+              </p>
+              <p>
+                Our brickwork services include all new build residential and
+                commercial developments, Edu- cation and health care
+                projects.<br /><br />
+                We are able to offer services that cover the ma- jority of the
+                South East of England and London.
+              </p>
+            </div>
+          </div>
+          <div>
+            <img style="width: 100%" src="./img/brick.png" />
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div>
+          <img src="./img/chas-logo.svg" alt="CHAS logo" />
+          <img src="./img/construction-logo.svg" alt="Constructionline logo" />
+        </div>
+        <img src="./img/gallant-logo.svg" alt="Gallant logo" />
+      </footer>
+    </div>
+    <script type="module" src="js/index.js"></script>
+  </body>
 </html>
