--- a/src/brickwork.html
+++ b/src/brickwork.html
@@ -93,15 +93,14 @@
                 Gallant Brickwork has an extensive workforce of highly skilled
                 tradesmen, who carry a wealth of knowledge in all aspects of
                 bricklaying.<br /><br />
-                Our core structure is built around the considera- ble high-level
+                Our core structure is built around the considerable high-level
                 management we retain, enabling us to successfully build and
                 develop strong relationships with our clients.
               </p>
               <p>
                 Our brickwork services include all new build residential and
-                commercial developments, Edu- cation and health care
-                projects.<br /><br />
-                We are able to offer services that cover the ma- jority of the
+                commercial developments, education and health care projects.<br /><br />
+                We are able to offer services that cover the majority of the
                 South East of England and London.
               </p>
             </div>
