--- a/src/fire-barrier-remedials.html
+++ b/src/fire-barrier-remedials.html
@@ -92,14 +92,13 @@
               <p>
                 Following on from the Grenfell disaster, the Hackitt report was
                 issued in December 2017, this identified that the current system
-                of building regulations and fire safety was not fit for pur-
-                pose and that a culture change was required to support the
-                delivery of buildings that are safe, both now and in the
-                future.<br /><br />
+                of building regulations and fire safety was not fit for purpose
+                and that a culture change was required to support the delivery
+                of buildings that are safe, both now and in the future.<br /><br />
                 The government have now implemented a building a safer future
                 charter. This outlines the requirements and programme for
-                improving fire safety protection within existing high-rise resi-
-                dentials buildings.
+                improving fire safety protection within existing high-rise
+                residential buildings.
               </p>
               <p>
                 The majority of UK’s largest house builders have now signed up
@@ -110,7 +109,7 @@
                 challenging existing building facades safer construction
                 legislation. We have developed our existing expertise to
                 accommodate the ever-changing construction requirement’s. Our
-                structured approach en- sures continued success in this sector.
+                structured approach ensures continued success in this sector.
               </p>
             </div>
           </div>
