--- a/src/about.html
+++ b/src/about.html
@@ -103,7 +103,7 @@
                 Offering a large variety of brickwork services over multiple
                 sectors. We continue to utilise our knowledge to help deliver
                 flagship schemes across the South East and London.<br /><br />
-                We continue to focus on improving and expand- ing our approach,
+                We continue to focus on improving and expanding our approach,
                 mainaining continued sucess and growth.
               </p>
             </div>
