--- a/src/silicone-damp-treatment.html
+++ b/src/silicone-damp-treatment.html
@@ -96,17 +96,16 @@
                 penetrating damp is one of the most problematic forms of damp to
                 fix. <br /><br />
                 We are able to treat and prevent damp caused by external
-                brickwork façade failure. Our sili- cone waterseal not only
-                waterproofs, but pro- tects brickwork against rain, damp and
-                frost damage. It also helps defend brickwork against dust, dirt,
-                water penetration and efflorescence.
+                brickwork façade failure. Our silicone waterseal not only
+                waterproofs, but protects brickwork against rain, damp and frost
+                damage. It also helps defend brickwork against dust, dirt, water
+                penetration and efflorescence.
               </p>
               <p>
                 Our skilled tradesman will carefully apply the silicone
-                waterseal to existing external brick- work. Once sprayed and
-                brushed on, the treat- ment penetrates deep into the
-                substrate.<br /><br />
-                This maximises the safeguard given and en- sures long lasting
+                waterseal to existing external brickwork. Once sprayed and
+                brushed on, the treatment penetrates deep into the substrate.<br /><br />
+                This maximises the safeguard given and ensures long lasting
                 protection.<br /><br />
                 Gallant Brickwork understand the importance of protecting your
                 brickwork and masonry. Which is why, we are able to guarantee
@@ -121,10 +120,18 @@
       </div>
       <footer>
         <div>
-          <img src="./img/chas-logo.svg" alt="CHAS logo" />
-          <img src="./img/construction-logo.svg" alt="Constructionline logo" />
+          <img id="chas-logo" src="./img/chas-logo.svg" alt="CHAS logo" />
+          <img
+            id="construction-logo"
+            src="./img/construction-logo.svg"
+            alt="Constructionline logo"
+          />
         </div>
-        <img src="./img/gallant-logo.svg" alt="Gallant logo" />
+        <img
+          src="./img/gallant-logo.svg"
+          id="gallant-logo"
+          alt="Gallant logo"
+        />
       </footer>
     </div>
     <script type="module" src="js/index.js"></script>
