--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,21 @@
         </nav>
       </header>
       <img class="logo-main" src="./img/gallant-logo.svg" />
-      <footer></footer>
+      <footer>
+        <div>
+          <img id="chas-logo" src="./img/chas-logo.svg" alt="CHAS logo" />
+          <img
+            id="construction-logo"
+            src="./img/construction-logo.svg"
+            alt="Constructionline logo"
+          />
+        </div>
+        <img
+          src="./img/gallant-logo.svg"
+          id="gallant-logo"
+          alt="Gallant logo"
+        />
+      </footer>
     </div>
     <script type="module" src="js/index.js"></script>
   </body>
