--- a/src/about.html
+++ b/src/about.html
@@ -79,8 +79,8 @@
           </ul>
         </nav>
       </header>
-      <div>
-        <h1>About</h1>
+      <div class="content-wrapper">
+        <h1 class="content-title">About</h1>
         <div class="content-grid">
           <div>
             <p class="content-lead">
@@ -115,10 +115,18 @@
       </div>
       <footer>
         <div>
-          <img src="./img/chas-logo.svg" alt="CHAS logo" />
-          <img src="./img/construction-logo.svg" alt="Constructionline logo" />
+          <img id="chas-logo" src="./img/chas-logo.svg" alt="CHAS logo" />
+          <img
+            id="construction-logo"
+            src="./img/construction-logo.svg"
+            alt="Constructionline logo"
+          />
         </div>
-        <img src="./img/gallant-logo.svg" alt="Gallant logo" />
+        <img
+          src="./img/gallant-logo.svg"
+          id="gallant-logo"
+          alt="Gallant logo"
+        />
       </footer>
     </div>
     <script type="module" src="js/index.js"></script>
