--- a/src/brickwork.html
+++ b/src/brickwork.html
@@ -79,7 +79,7 @@
           </ul>
         </nav>
       </header>
-      <div>
+      <div class="content-wrapper">
         <h1 class="content-title">Brickwork</h1>
         <div class="content-grid">
           <div>
@@ -112,10 +112,18 @@
       </div>
       <footer>
         <div>
-          <img src="./img/chas-logo.svg" alt="CHAS logo" />
-          <img src="./img/construction-logo.svg" alt="Constructionline logo" />
+          <img id="chas-logo" src="./img/chas-logo.svg" alt="CHAS logo" />
+          <img
+            id="construction-logo"
+            src="./img/construction-logo.svg"
+            alt="Constructionline logo"
+          />
         </div>
-        <img src="./img/gallant-logo.svg" alt="Gallant logo" />
+        <img
+          src="./img/gallant-logo.svg"
+          id="gallant-logo"
+          alt="Gallant logo"
+        />
       </footer>
     </div>
     <script type="module" src="js/index.js"></script>
