--- a/src/silicone-damp-treatment.html
+++ b/src/silicone-damp-treatment.html
@@ -79,8 +79,8 @@
           </ul>
         </nav>
       </header>
-      <div>
-        <h1>Silicone Damp Treatment</h1>
+      <div class="content-wrapper">
+        <h1 class="content-title">Silicone Damp Treatment</h1>
         <div class="content-grid">
           <div>
             <p class="content-lead">
