--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
     </script>
   </head>
   <body>
-    <div class="page-wrapper">
+    <div style="display: flex;" class="page-wrapper">
       <header>
         <nav>
           <ul>
