Added mobile navigation

--- a/src/index.html
+++ b/src/index.html
@@ -60,9 +60,12 @@
     </script>
   </head>
   <body>
-    <div style="display: flex;" class="page-wrapper">
-      <header>
-        <nav>
+    <div style="display: flex" class="page-wrapper">
+      <header id="header">
+        <button id="menu-button">
+          <img src="./img/menu-icon.svg" alt="menu icon" />
+        </button>
+        <nav id="desktop-menu">
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="./brickwork.html">Brickwork</a></li>
