--- a/src/brickwork.html
+++ b/src/brickwork.html
@@ -61,8 +61,11 @@
   </head>
   <body>
     <div class="page-wrapper">
-      <header>
-        <nav>
+      <header id="header">
+        <button id="menu-button">
+          <img src="./img/menu-icon.svg" alt="menu icon" />
+        </button>
+        <nav id="desktop-menu">
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="./brickwork.html">Brickwork</a></li>
@@ -79,7 +82,7 @@
           </ul>
         </nav>
       </header>
-      <div class="content-wrapper">
+      <div id="content-wrapper">
         <h1 class="content-title">Brickwork</h1>
         <div class="content-grid">
           <div>
