Connected contact form

--- a/src/contact.html
+++ b/src/contact.html
@@ -99,13 +99,13 @@
           <div>
             <form
               id="contact-form"
-              action="https://formspree.io/f/mwkjzvby"
+              action="https://formspree.io/f/mqkvqglj"
               method="POST"
             >
               <div class="singlefield">
                 <label>
                   <span>Name:</span>
-                  <input ptype="email" name="email">
+                  <input ptype="name" name="name">
                 </label>
               </div>
               <div class="multifield">
@@ -115,12 +115,12 @@
                 </label>
                 <label>
                   <span>Telephone:</span>
-                  <input ptype="email" name="email">
+                  <input ptype="telephone" name="Telephone" type="telephone">
                 </label>
             </div>
               <div id="message-field">
                 <span class="label-span">Your enquiry:</span>
-                <textarea name="message"></textarea>
+                <textarea ptype="message" name="message"></textarea>
                 <button id="btn-submit" type="submit">Send</button>
               <div>
           </form>
